2003-03-16  Elias Athanasopoulos  <elathan@phys.uoa.gr>

	* nm.c (print_symbol_info_bsd): Print the symbol's size instead of
	the symbol's value when --size-sort is used, unless -S is used.
	doc/binutils.texi (--size-sort): For non-bsd formats both the
	value and size of the symbols are displayed.
	
2003-03-13  Nick Clifton  <nickc@redhat.com>

	* po/da.po: Update.

2003-03-12  Nick Clifton  <nickc@redhat.com>

	* MAINTAINERS: Remove Peter Targett as ARC maintainer.

2003-03-10  Ben Elliston  <bje@wasabisystems.com>

	* MAINTAINERS: Update my mail address.

2003-03-06  Elias Athanasopoulos  <elathan@phys.uoa.gr>

	* stabs.c (BYTES_IN_WORD): Remove definition.
	* wrstabs.c (BYTES_IN_WORD): Likewise.

2003-03-04  Nick Clifton  <nickc@redhat.com>

	* nm.c (main): Print a warning message if --size-sort and
	--undefined-only are used together.

2003-03-04  Elias Athanasopoulos  <elathan@phys.uoa.gr>

	* nm.c (print_symbol): Remove check for undefined_only.
	
2003-03-03  Nick Clifton  <nickc@redhat.com>

	* po/da.po: Installed latest translation.

2003-02-24  Nick Clifton  <nickc@redhat.com>

	* README: Update binutils references to 2.13.
	Add paragraph about using --disable-nls.

2003-02-24  Elias Athanasopoulos  <elathan@phys.uoa.gr>

	* doc/binutils.texi (nm --size-sort): Update.

2003-02-21  James E Wilson  <wilson@tuliptree.org>

	* MAINTAINERS: Update email address.

2003-02-21  Ian Wienand  <ianw@gelato.unsw.edu.au>

	* readelf.c (get_ia64_dynamic_type): New function.
	(dynamic_segment_ia64_val): New function.
	(get_dynamic_type): If machine type is EM_IA_64 call
	get_ia64_dynamic_val.
	(get_ia64_section_type_name): Handle sections with types in the
	SHT_IA_64_LOPSREG to SHT_IA_64_HIPSREG range.
	(get_dynamic_flags): If machine type is EM_IA_64 call
	dynamic_segment_ia64_val.

2003-02-21  Bob Wilson  <bob.wilson@acm.org>

	* doc/binutils.texi: Fix typos and obvious texinfo mistakes.  Make
	section title capitalization more consistent.  Update descriptions